--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <script src="https://kit.fontawesome.com/e24aea72ef.js" crossorigin="anonymous"></script>
+    <title>YourHotel</title>
   </head>
   <body>
     <noscript>
